--- a/src/main/resources/assets/nicksmod/lang/en_us.json
+++ b/src/main/resources/assets/nicksmod/lang/en_us.json
@@ -3,10 +3,13 @@
   "item.nicksmod.raw_bismuth": "Raw Bismuth",
   "item.nicksmod.chisel": "Chisel",
 
+  "item.nicksmod.hot_dog": "Hot Dog",
+
   "block.nicksmod.bismuth_block": "Block of Bismuth",
   "block.nicksmod.bismuth_ore": "Bismuth Ore",
   "block.nicksmod.bismuth_deepslate_ore": "Bismuth Deepslate Ore",
 
+  "block.nicksmod.magic_block": "Magic Block",
 
   "creativetab.nicksmod.bismuth_items": "Bismuth Items",
   "creativetab.nicksmod.bismuth_blocks": "Bismuth Blocks"
