Colorful Bricks update

--- a/src/main/resources/assets/nicksmod/lang/en_us.json
+++ b/src/main/resources/assets/nicksmod/lang/en_us.json
@@ -46,7 +46,59 @@
 
   "block.nicksmod.magic_block": "Magic Block",
 
+  "block.nicksmod.white_bricks": "White Bricks",
+  "block.nicksmod.light_gray_bricks": "Light Gray Bricks",
+  "block.nicksmod.gray_bricks": "Gray Bricks",
+  "block.nicksmod.black_bricks": "Black Bricks",
+  "block.nicksmod.brown_bricks": "Brown Bricks",
+  "block.nicksmod.red_bricks": "Red Bricks",
+  "block.nicksmod.orange_bricks": "Orange Bricks",
+  "block.nicksmod.yellow_bricks": "Yellow Bricks",
+  "block.nicksmod.lime_bricks": "Lime Bricks",
+  "block.nicksmod.green_bricks": "Green Bricks",
+  "block.nicksmod.cyan_bricks": "Cyan Bricks",
+  "block.nicksmod.light_blue_bricks": "Light Blue Bricks",
+  "block.nicksmod.blue_bricks": "Blue Bricks",
+  "block.nicksmod.purple_bricks": "Purple Bricks",
+  "block.nicksmod.magenta_bricks": "Magenta Bricks",
+  "block.nicksmod.pink_bricks": "Pink Bricks",
+
+  "item.nicksmod.white_brick": "White Brick",
+  "item.nicksmod.light_gray_brick": "Light Gray Brick",
+  "item.nicksmod.gray_brick": "Gray Brick",
+  "item.nicksmod.black_brick": "Black Brick",
+  "item.nicksmod.brown_brick": "Brown Brick",
+  "item.nicksmod.red_brick": "Red Brick",
+  "item.nicksmod.orange_brick": "Orange Brick",
+  "item.nicksmod.yellow_brick": "Yellow Brick",
+  "item.nicksmod.lime_brick": "Lime Brick",
+  "item.nicksmod.green_brick": "Green Brick",
+  "item.nicksmod.cyan_brick": "Cyan Brick",
+  "item.nicksmod.light_blue_brick": "Light Blue Brick",
+  "item.nicksmod.blue_brick": "Blue Brick",
+  "item.nicksmod.purple_brick": "Purple Brick",
+  "item.nicksmod.magenta_brick": "Magenta Brick",
+  "item.nicksmod.pink_brick": "Pink Brick",
+
+  "item.nicksmod.white_clay": "White Clay",
+  "item.nicksmod.light_gray_clay": "Light Gray Clay",
+  "item.nicksmod.gray_clay": "Gray Clay",
+  "item.nicksmod.black_clay": "Black Clay",
+  "item.nicksmod.brown_clay": "Brown Clay",
+  "item.nicksmod.red_clay": "Red Clay",
+  "item.nicksmod.orange_clay": "Orange Clay",
+  "item.nicksmod.yellow_clay": "Yellow Clay",
+  "item.nicksmod.lime_clay": "Lime Clay",
+  "item.nicksmod.green_clay": "Green Clay",
+  "item.nicksmod.cyan_clay": "Cyan Clay",
+  "item.nicksmod.light_blue_clay": "Light Blue Clay",
+  "item.nicksmod.blue_clay": "Blue Clay",
+  "item.nicksmod.purple_clay": "Purple Clay",
+  "item.nicksmod.magenta_clay": "Magenta Clay",
+  "item.nicksmod.pink_clay": "Pink Clay",
+
   "creativetab.nicksmod.bismuth_items": "Bismuth Items",
   "creativetab.nicksmod.bismuth_blocks": "Bismuth Blocks",
-  "creativetab.nicksmod.hot_dog_items": "Hot Dogs"
+  "creativetab.nicksmod.hot_dog_items": "Hot Dogs",
+  "creativetab.nicksmod.colorful_bricks": "Colorful Bricks"
 }
