Colorful Bricks alternate blocks and Zircon blocks and tools

--- a/src/main/resources/assets/nicksmod/lang/en_us.json
+++ b/src/main/resources/assets/nicksmod/lang/en_us.json
@@ -3,6 +3,11 @@
   "item.nicksmod.raw_bismuth": "Raw Bismuth",
   "item.nicksmod.chisel": "Chisel",
 
+  "item.nicksmod.zircon": "Zircon",
+  "block.nicksmod.zircon_ore": "Zircon Ore",
+  "block.nicksmod.skill_tree_block": "Skill Tree Block",
+  "item.nicksmod.skill_staff": "Skill Staff",
+
   "item.nicksmod.hot_dog": "Hot Dog",
   "block.nicksmod.hot_dog_block": "Hot Dog Block",
 
@@ -62,6 +67,57 @@
   "block.nicksmod.purple_bricks": "Purple Bricks",
   "block.nicksmod.magenta_bricks": "Magenta Bricks",
   "block.nicksmod.pink_bricks": "Pink Bricks",
+
+  "block.nicksmod.white_bricks_slab": "White Brick Slab",
+  "block.nicksmod.light_gray_bricks_slab": "Light Gray Brick Slab",
+  "block.nicksmod.gray_bricks_slab": "Gray Brick Slab",
+  "block.nicksmod.black_bricks_slab": "Black Brick Slab",
+  "block.nicksmod.brown_bricks_slab": "Brown Brick Slab",
+  "block.nicksmod.red_bricks_slab": "Red Brick Slab",
+  "block.nicksmod.orange_bricks_slab": "Orange Brick Slab",
+  "block.nicksmod.yellow_bricks_slab": "Yellow Brick Slab",
+  "block.nicksmod.lime_bricks_slab": "Lime Brick Slab",
+  "block.nicksmod.green_bricks_slab": "Green Brick Slab",
+  "block.nicksmod.cyan_bricks_slab": "Cyan Brick Slab",
+  "block.nicksmod.light_blue_bricks_slab": "Light Blue Brick Slab",
+  "block.nicksmod.blue_bricks_slab": "Blue Brick Slab",
+  "block.nicksmod.purple_bricks_slab": "Purple Brick Slab",
+  "block.nicksmod.magenta_bricks_slab": "Magenta Brick Slab",
+  "block.nicksmod.pink_bricks_slab": "Pink Brick Slab",
+
+  "block.nicksmod.white_bricks_stairs": "White Brick Stairs",
+  "block.nicksmod.light_gray_bricks_stairs": "Light Gray Brick Stairs",
+  "block.nicksmod.gray_bricks_stairs": "Gray Brick Stairs",
+  "block.nicksmod.black_bricks_stairs": "Black Brick Stairs",
+  "block.nicksmod.brown_bricks_stairs": "Brown Brick Stairs",
+  "block.nicksmod.red_bricks_stairs": "Red Brick Stairs",
+  "block.nicksmod.orange_bricks_stairs": "Orange Brick Stairs",
+  "block.nicksmod.yellow_bricks_stairs": "Yellow Brick Stairs",
+  "block.nicksmod.lime_bricks_stairs": "Lime Brick Stairs",
+  "block.nicksmod.green_bricks_stairs": "Green Brick Stairs",
+  "block.nicksmod.cyan_bricks_stairs": "Cyan Brick Stairs",
+  "block.nicksmod.light_blue_bricks_stairs": "Light Blue Brick Stairs",
+  "block.nicksmod.blue_bricks_stairs": "Blue Brick Stairs",
+  "block.nicksmod.purple_bricks_stairs": "Purple Brick Stairs",
+  "block.nicksmod.magenta_bricks_stairs": "Magenta Brick Stairs",
+  "block.nicksmod.pink_bricks_stairs": "Pink Brick Stairs",
+
+  "block.nicksmod.white_bricks_wall": "White Brick Wall",
+  "block.nicksmod.light_gray_bricks_wall": "Light Gray Brick Wall",
+  "block.nicksmod.gray_bricks_wall": "Gray Brick Wall",
+  "block.nicksmod.black_bricks_wall": "Black Brick Wall",
+  "block.nicksmod.brown_bricks_wall": "Brown Brick Wall",
+  "block.nicksmod.red_bricks_wall": "Red Brick Wall",
+  "block.nicksmod.orange_bricks_wall": "Orange Brick Wall",
+  "block.nicksmod.yellow_bricks_wall": "Yellow Brick Wall",
+  "block.nicksmod.lime_bricks_wall": "Lime Brick Wall",
+  "block.nicksmod.green_bricks_wall": "Green Brick Wall",
+  "block.nicksmod.cyan_bricks_wall": "Cyan Brick Wall",
+  "block.nicksmod.light_blue_bricks_wall": "Light Blue Brick Wall",
+  "block.nicksmod.blue_bricks_wall": "Blue Brick Wall",
+  "block.nicksmod.purple_bricks_wall": "Purple Brick Wall",
+  "block.nicksmod.magenta_bricks_wall": "Magenta Brick Wall",
+  "block.nicksmod.pink_bricks_wall": "Pink Brick Wall",
 
   "item.nicksmod.white_brick": "White Brick",
   "item.nicksmod.light_gray_brick": "Light Gray Brick",
