Added Ability Enable key and skill page gui

--- a/src/main/resources/assets/nicksmod/lang/en_us.json
+++ b/src/main/resources/assets/nicksmod/lang/en_us.json
@@ -156,5 +156,7 @@
   "creativetab.nicksmod.bismuth_items": "Bismuth Items",
   "creativetab.nicksmod.bismuth_blocks": "Bismuth Blocks",
   "creativetab.nicksmod.hot_dog_items": "Hot Dogs",
-  "creativetab.nicksmod.colorful_bricks": "Colorful Bricks"
+  "creativetab.nicksmod.colorful_bricks": "Colorful Bricks",
+
+  "key.nicksmod.areamode": "Change Your Tool To 3x3 Area Mode"
 }
