Updated GUI data and added new chopping and unarmed bonuses

--- a/src/main/resources/assets/nicksmod/lang/en_us.json
+++ b/src/main/resources/assets/nicksmod/lang/en_us.json
@@ -158,5 +158,6 @@
   "creativetab.nicksmod.hot_dog_items": "Hot Dogs",
   "creativetab.nicksmod.colorful_bricks": "Colorful Bricks",
 
-  "key.nicksmod.areamode": "Change Your Tool To 3x3 Area Mode"
+  "key.nicksmod.areamode": "Change Your Tool To 3x3 Area Mode",
+  "key.nicksmod.fellermode": "Change Your Axe To Tree Feller Mode"
 }
